--- a/detalhes/index.html
+++ b/detalhes/index.html
@@ -274,7 +274,8 @@
 		    				<h2 class="title"><a href="#">Sistema de cache</a></h2>
 		    				<div class="line-dotted"></div>
 							<p align="justify">
-								Um recurso importante que disponibilizamos, é o sistema de CACHE. Com o sistema de cache, o cliente não é cobrado pelo um mesmo número já consultado dentro de um prazo de até 60 minutos. OU seja, se você consultar o número 11-1234-5678, você terá até 60 minutos para consultar esse mesmo número sem ser tarifado.
+								Um recurso importante que disponibilizamos, é o sistema de CACHE. 
+								Com o sistema de cache o cliente não é cobrado pela consulta à um mesmo número em um prazo que pode variar de 15 à 60 minutos dependendo do plano escolhido, ou seja, ligações recorrentes não debitam crédito de consultas, desde que feitas dentro do prazo estipulado.
 							</p> 
 							<p align="justify">
 								O sistema de CACHE é dinâmico, ele aplica a regra de CACHE, basendo-se em sua quantidade de consultas consecultivas para o mesmo número, sendo assim o sistema de CACHE trabalha com 4 valores de minutos: 15,30,45 e 60 minutos.
@@ -300,13 +301,10 @@
 		    				<h2 class="title"><a href="#">Forma de pagamentos</a></h2>
 		    				<div class="line-dotted"></div>
 		    				<p align="justify">
-								Nosso sistema esta totalmente integrado com o PagSeguro. Desta forma o crédito é inserido na conta do cliente automaticamente após o PagSeguro confirmar a pagamento, o cliente irá receber um email informando o status do pagamento. Os status mais comuns são:
+								Nosso sistema trabalha com a plataforma de pagamento PagSeguro. 
+								Os créditos são vinculados à conta do cliente automaticamente após a confirmação do PagSeguro.
 							</p>
-							<p>
-								Aguardando pagamento<br>
-								Cancelado<br>
-								Confirmado<br>
-		    				</p> 
+
 							<p>
 							<strong class= "post-excerpt">Formas de pagamentos aceitas:</strong>
 							</p>
@@ -336,7 +334,7 @@
 		    				<h2 class="title"><a href="#">Integração e Compatibilidade</a></h2>
 		    				<div class="line-dotted"></div>
 		    				<p align="justify">
-								Nosso sistema é compatível com a maioria das centrais IP e Gatways GSM disponíveis no mercado. Como exemplos, podemos citar:
+								Nosso sistema é compatível com a maioria das centrais IP e Gatways GSM disponíveis no mercado, por exemplo:
 							</p> 
 							<p>
 							<strong class= "post-excerpt">Centrais IP:</strong>
@@ -358,7 +356,9 @@
 								OpenVox<br>
 		    				</p>
 		    				<p align="justify">
-								Para centrais NÃO IP, o nosso sistema também é compatível, porém é necessário um pequeno investiomento para que centrais antigas funcione. Neste caso, cada caso é um caso e deverá ser tratado individualmente com cada cliente.
+								Para que nosso sistema funcione em centrais NÃO IP, é necessário um pequeno investimento. 
+								Em casos como este, é necessário um estudo individual de cada caso.
+
 							</p> 
 		    			</div>
 		    		</div>
