--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					</nav>
 				</li>
                 <li><a>31-4062-7330</a></li>
-                <li><a href="mailto:comercial@cdr-port.net">comercial@cdr-port.net</a></li>
+                <li><a href="http://cdr-port.net/detalhes/">Como funciona?</a></li>
                 <li><a href="http://parceiros.cdr-port.net" target="_blank">Torne-se um parceiro</a></li>
 				<li><a href="index.html">CDR-Port</a></li>
 
