--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                             <h3>Plano 1.000</h3>
                         </div>
                         <div class="panel-body text-center">
-                            <p><strong>R$ 25,00 por recarga</strong></p>
+                            <p><strong>R$ 25,00</strong></p>
                         </div>
                         <ul class="list-group text-center">
                             <li class="list-group-item">R$ 0,025 por consulta</li>
@@ -215,7 +215,7 @@
                             <h3>Plano 2.000</h3>
                         </div>
                         <div class="panel-body text-center">
-                            <p><strong>R$ 40,00 por recarga</strong></p>
+                            <p><strong>R$ 40,00</strong></p>
                         </div>
                         <ul class="list-group text-center">
                             <li class="list-group-item">R$ 0,02 por consulta</li>
@@ -235,7 +235,7 @@
                             <h3>Plano 5.000</h3>
                         </div>
                         <div class="panel-body text-center">
-                            <p><strong>R$ 75,00 por recarga</strong></p>
+                            <p><strong>R$ 75,00</strong></p>
                         </div>
                         <ul class="list-group text-center">
                             <li class="list-group-item">R$ 0,015 por consulta</li>
@@ -253,7 +253,7 @@
                             <h3>Plano 10.000</h3>
                         </div>
                         <div class="panel-body text-center">
-                            <p><strong>R$ 100,00 por recarga</strong></p>
+                            <p><strong>R$ 100,00</strong></p>
                         </div>
                         <ul class="list-group text-center">
                             <li class="list-group-item">R$ 0,01 por consulta</li>
@@ -272,7 +272,7 @@
                             <h3>Plano 20.000</h3>
                         </div>
                         <div class="panel-body text-center">
-                            <p><strong>R$ 200,00 por recarga</strong></p>
+                            <p><strong>R$ 200,00</strong></p>
                         </div>
                         <ul class="list-group text-center">
                             <li class="list-group-item">R$ 0,01 por consulta</li>
