--- a/detalhes/index.html
+++ b/detalhes/index.html
@@ -151,7 +151,7 @@
 			        			<div class="about-service">
 			        				<h3 class="text-center">Compatível</h3>
 			        				<p class="text-center">
-			        					Compatível com as principais centrais IPBX do mercado. Asterisk, Intelbras, Leucotron, Panasonic, Digistar. Também compatível com Gatways GSM como GoIP, Dinstar, dentre outras.
+			        					Compatível com as principais centrais IPBX do mercado. Asterisk, Intelbras, Leucotron, Panasonic, Digistar. Também compatível com Gateways GSM como GoIP, Dinstar, dentre outras.
 			        				</p>
 			        			</div>
 			        		</div>	<!-- col-sm-4 -->
@@ -334,7 +334,7 @@
 		    				<h2 class="title"><a href="#">Integração e Compatibilidade</a></h2>
 		    				<div class="line-dotted"></div>
 		    				<p align="justify">
-								Nosso sistema é compatível com a maioria das centrais IP e Gatways GSM disponíveis no mercado, por exemplo:
+								Nosso sistema é compatível com a maioria das centrais IP e Gateways GSM disponíveis no mercado, por exemplo:
 							</p> 
 							<p>
 							<strong class= "post-excerpt">Centrais IP:</strong>
@@ -347,7 +347,7 @@
 								Panasonic<br>
 		    				</p> 
 		    				<p>
-								<strong class= "post-excerpt">Gatways GSM:</strong>
+								<strong class= "post-excerpt">Gateways GSM:</strong>
 							</p>
 							<p>
 								GoIP<br>
