--- a/index.html
+++ b/index.html
@@ -187,8 +187,10 @@
 		</div>
 		<div class="container">
 
+		<div class="container">
+
             <div class="row">
-                <!-- item -->
+                <!--
                 <div class="col-md-4 text-center">
                     <div class="panel panel-danger panel-pricing">
                         <div class="panel-heading">
@@ -206,8 +208,7 @@
                         </ul>
                     </div>
                 </div>
-                <!-- /item -->
-                <!-- item -->
+
                 <div class="col-md-4 text-center">
                     <div class="panel panel-warning panel-pricing">
                         <div class="panel-heading">
@@ -225,9 +226,6 @@
                         </ul>
                     </div>
                 </div>
-                <!-- /item -->
-
-                <!-- item -->
                 <div class="col-md-4 text-center">
                     <div class="panel panel-success panel-pricing">
                         <div class="panel-heading">
@@ -245,7 +243,6 @@
                         </ul>
                     </div>
                 </div>
-                <!-- /item -->
                 <div class="col-md-4 text-center">
                     <div class="panel panel-danger panel-pricing">
                         <div class="panel-heading">
@@ -263,8 +260,6 @@
                         </ul>
                     </div>
                 </div>
-                <!-- /item -->
-                <!-- item -->
                 <div class="col-md-4 text-center">
                     <div class="panel panel-warning panel-pricing">
                         <div class="panel-heading">
@@ -282,9 +277,6 @@
                         </ul>
                     </div>
                 </div>
-                <!-- /item -->
-
-                <!-- item -->
                 <div class="col-md-4 text-center">
                     <div class="panel panel-success panel-pricing">
                         <div class="panel-heading">
@@ -303,7 +295,7 @@
 
                     </div>
                 </div>
-                <!-- /item -->
+                -->
 
                 <div class="col-md-4 text-center">
                 </div>
@@ -329,13 +321,13 @@
                         </div>
                     </div>
                 </div>
-                <!-- /item -->
+                <!-- 
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="section-heading">
                     <p> <i class="fa fa-asterisk"></i> O sistema de cache varia de acordo com o plano contratado. O sistema de cache varia entre 15,30,45,60 minutos. Detro do período de cache, um número já consultado não será tarifado novamente.</p>
                     </div>
                 </div>
-                <!-- item -->
+                -->
                 <div class="col-md-4 text-center">
                 </div>
                 <!-- /item -->
