--- a/detalhes/index.html
+++ b/detalhes/index.html
@@ -252,8 +252,8 @@
 								Nosso sistema de cobrança é pré-pago, ou seja, você paga para usar o sistema. Nós temos planos flexíveis quem se encaixam em sua necessidade.
 							</p> -->
 							<p align="justify">
-								O sistema debita cada cunsulta realizada pelo cliente após retornar o código da operadora para a central PABX.
-								Para exemplificar, podemos citar o plano de R$ 25,00 que possue 1.000 consultas. Você pode consultar até 1.000 números. Uma consulta é =  a 1 crédito.
+								O sistema debita cada consulta realizada pelo cliente após retornar o código da operadora para a central PABX.
+								Para exemplificar, podemos citar o plano de R$ 25,00 que possui 1.000 consultas. Você pode consultar até 1.000 números. Uma consulta é =  a 1 crédito.
 							</p> 
 		    			</div>
 		    		</div>
